se modifico el metodo Arithmetic para correr con Arraylist en lugar de lInked list